--- a/Tic_Tac_Toe/Views/Game/Index.cshtml
+++ b/Tic_Tac_Toe/Views/Game/Index.cshtml
@@ -29,7 +29,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f0f0f0;
+            background-color: yellow;
         }
 
         #parent {
